--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "eas-updates": "dotenv -e .env -- eas update"
   },
   "jest": {
     "preset": "jest-expo"
@@ -18,6 +19,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "appwrite": "^16.1.0",
+    "dotenv": "^16.4.7",
     "expo": "^52.0.23",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
@@ -35,6 +37,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-appwrite": "^0.5.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.6",
     "react-native-safe-area-context": "4.12.0",
@@ -49,6 +52,7 @@
     "@babel/core": "^7.26.0",
     "@types/jest": "^29.5.14",
     "@types/react": "~18.3.18",
+    "@types/react-native-dotenv": "^0.2.2",
     "@types/react-test-renderer": "^18.3.1",
     "jest": "^29.7.0",
     "jest-expo": "~52.0.2",
