--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "real-scout-native",
+  "name": "real-scout",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
-    "eas-updates": "dotenv -e .env -- eas update"
+    "eas-updates": "eas secret:push --scope project --env-file .env"
   },
   "jest": {
     "preset": "jest-expo"
@@ -21,8 +21,10 @@
     "appwrite": "^16.1.0",
     "dotenv": "^16.4.7",
     "expo": "^52.0.23",
+    "expo-auth-session": "~6.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.7",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
